-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Cluster Scalability
-
Fully Compatible
-
ALL
-
v8.0
-
Cluster Scalability 2024-4-29, Cluster Scalability 2024-5-13, Cluster Scalability 2024-5-27, Cluster Scalability 2024-6-10
-
200
-
None
-
None
-
None
-
None
-
None
-
None
-
None
SERVER-88391 added logic to the AsyncRequestsSender to return a failed response if it fails to "unyield" its session resources. The response will include only the failed status, not a shard id, which is the only case an ARS response won't have a shard id. This breaks an assumption in the batched write execution logic (e.g. insert, update, delete through mongos) that every ARS response has a shard id, which either triggers a dassert or a segmentation fault accessing a non-existent entry in a map.
We can either change the ARS to always return some shard id, or possibly relax users of the ARS's assumption that every response has a shard id.
- is caused by
-
SERVER-88391 Ensure transaction aborts if participant shard fails to unyield
-
- Closed
-