SERVER-89568 Make AsyncRequestSender return unyield error with a ShardId (#21500)

GitOrigin-RevId: 6236493c92fa97bb652d67c6d2c490850d5850a4